--- a/public/assets/css/templatemo-softy-pinko.css
+++ b/public/assets/css/templatemo-softy-pinko.css
@@ -412,16 +412,14 @@ header
 .header-area .main-nav {
   box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
   border-radius: 40px;
-  min-height: 80px;
+  min-height: 65px;
   background: #fff;
 }
 
 .header-area .main-nav .logo {
   color: white;
-  text-shadow: 14px 10px 4px rgba(0,0,0,0.68);
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-  font-size: 26px;
+  text-shadow: 5px 5px 4px rgba(0,0,0,0.68);
+  font-size: 40px;
   font-weight: 400;
   float: left;
   margin-top: 37px;
@@ -439,9 +437,9 @@ header
   transition: all 0.3s ease 0s;
 }
 .header-area .main-nav{
-  box-shadow: 6px 5px 16px 0px rgb(242,61,0);
+  /* box-shadow: 6px 5px 16px 0px rgb(242,61,0);
   -webkit-box-shadow: 6px 5px 16px 0px rgb(242,61,0);
-  -moz-box-shadow: 6px 5px 16px 0px rgb(242,61,0);
+  -moz-box-shadow: 6px 5px 16px 0px rgb(242,61,0); */
   background: linear-gradient(130deg, rgba(242,61,0,1) 0%, rgba(189, 14, 14, 0.719) 100%);
 }
 
@@ -590,7 +588,7 @@ header
 }
 
 .header-area.header-sticky .nav {
-  margin-top: 20px !important;
+  margin-top: 10px !important;
 }
 
 .header-area.header-sticky .nav li a {
@@ -622,7 +620,7 @@ header
     padding: 0px;
   }
   .header-area .logo {
-    margin-top: 27px !important;
+    margin-top: 0px !important;
     margin-left: 30px;
   }
   .header-area .menu-trigger {
@@ -677,19 +675,19 @@ welcome
 --------------------------------------------- 
 */
 .welcome-area {
-  overflow: hidden;
+  overflow: scroll;
   position: relative;
   display: flex;
   align-items: center;
   /* background: rgb(255,250,250); */
    /* background: linear-gradient(90deg, rgb(186, 6, 39) 0%, rgba(207, 10, 53, 0.575) 48%, rgba(194, 21, 58, 0.493) 100%); */
-  background: url(../images/background.jpg) ;
+  /* background: url(../images/background.jpg) ; */
   background-position: center; 
   background-repeat: no-repeat;
   background-size: cover;
   justify-content: center;
 
-  height: 110vh;
+  height: 200vh;
 }
 /* background */
 .welcome-area::before{
@@ -724,19 +722,23 @@ welcome
 }
 .welcome-area .container{
   margin-top: 140px ;
+  height: 90%;
 }
 .welcome-area .block-post{
-  margin-bottom: 3px;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 991px) {
   .welcome-area {
-    height: 225vh;
+    height: 425vh;
   }
   .welcome-area .container{
+
     margin-top: 200px ;
   }
- 
+  .welcome-area .container > div{
+    margin-bottom: 16px;
+  }
 }
 
 @media (max-width: 820px) {
@@ -804,7 +806,7 @@ BLOCK POST
 }
 .block-post .text h1{
   /* margin: 15px 0 5px 30px; */
-  font-size: 36px;
+  font-size: 30px;
 }
 .block-post .text p{
   /* margin: 15px 0 5px 30px; */
@@ -909,6 +911,7 @@ BLOCK POST
 }
 .separador h1{
   margin-left: 20px ;
+  font-size: 36px;
 }
 
 /* separador end  */
@@ -1149,6 +1152,7 @@ BLOCK POST
 }
 .section-grid .separador{
   grid-area: separador;
+  height: 40px;
 }
 .container-post{
   grid-area: container-post;
