--- a/views/website/index_save.ejs
+++ b/views/website/index_save.ejs
@@ -49,12 +49,12 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <!-- <li>
+                        <li>
                             <a href="#" class="logo" style="margin-top: 0px;">
-                                SHINOBI<br>
-                                MODS
+                                Shinobi 
+                                Youtuber
                             </a>
-                        </li> -->
+                        </li>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
@@ -280,10 +280,7 @@
     
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
-    <script src="assets/js/personalizado.js"></script>
 
   </body>
 </html>
-
-
 
