--- a/views/dashboard/dashboard-browse.ejs
+++ b/views/dashboard/dashboard-browse.ejs
@@ -244,7 +244,7 @@
                             <i class="icon-speedometer menu-icon"></i><span class="nav-text">Dashboard</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="./dashboard">Pagina Principal</a>cd ./</li>
+                            <li><a href="./dashboard">Pagina Principal</a></li>
                             <li><a href="./pub">Publicações</a></li>
                             <li><a href="#">browse</a></li>
                         </ul>
